--- a/www/partials/log.html
+++ b/www/partials/log.html
@@ -1,5 +1,5 @@
 <div ng-cloak id="popupContainer">			
-	<md-content>
+	<md-content class="md-padding">
 		<md-list ng-hide="!results || results.length == 0">
 	      <md-list-item ng-repeat="item in results">
 	      	<div flex>
