--- a/www/partials/diary.html
+++ b/www/partials/diary.html
@@ -1,5 +1,5 @@
-<div ng-cloak id="popupContainer">  <md-content>
-	<md-card>
+<div ng-cloak id="popupContainer">  
+	<md-content class="md-padding">
 		<md-list ng-hide="!results || results.length == 0">
 	      <md-list-item ng-repeat="item in results">
 	      	<div flex>
@@ -11,6 +11,7 @@
 	        <md-divider ng-if="!$last"></md-divider>
 	      </md-list-item>
 	    </md-list>
+	    
 	    <md-card ng-show="!results || results.length == 0">
 	    	<md-card-title>
           		<md-card-title-text>
