--- a/www/partials/tools.html
+++ b/www/partials/tools.html
@@ -1,31 +1,19 @@
-<style>
-	.border { border-style: solid;}
-</style>
-
 <div ng-cloak>			
-	<md-content>
-		 <div ng-repeat="tool in tools">
-			<div layout="column" layout-wrap>			
-				<md-card>
-					<md-card-title>
-						<md-card-title-media layout-padding>
-							<div flex class="border md-media-md card-media"></div>
-						</md-card-title-media>
-						<md-card-title-text>
-							<span class="md-headline">{{tool.name}}</span>
-							<span class="md-subhead">Developed by {{tool.developedBy}}.</span>
-						</md-card-title-text>
-					</md-card-title>
-					<md-card-content>
-						<p>{{tool.briefDescription}}</p>
-					</md-card-content>
-					
-					<md-card-actions layout="row" layout-padding layout-align="end end">				
-						<md-button ng-click="addTool(tool.id)" class="md-raised md-primary" aria-label="Add to Toolbox">Add to Toolkit</md-button>
-						<md-button ng-click="assignToolID(tool.id)" class="md-raised md-primary" aria-label="More Details">More Details</md-button>
-					</md-card-actions>
-				</md-card>
-			</div>
-		</div>
+	<md-content class="md-padding">	
+		<md-card ng-repeat="tool in tools">
+			<md-card-title>
+				<md-card-title-text>
+					<span class="md-headline">{{tool.name}}</span>
+					<span class="md-subhead">Developed by {{tool.developedBy}}</span>
+				</md-card-title-text>
+			</md-card-title>
+			<md-card-content>
+				<p>{{tool.briefDescription}}</p>
+			</md-card-content>
+			<md-card-actions layout="row" layout-align="end end">				
+				<md-button ng-click="addTool(tool.id)" class="md-accent" aria-label="Add to Toolbox">Add to Toolkit</md-button>
+				<md-button ng-click="assignToolID(tool.id)" class="md-accent" aria-label="More Details">More Details</md-button>
+			</md-card-actions>
+		</md-card>
 	</md-content>
 </div>
