--- a/www/partials/about.html
+++ b/www/partials/about.html
@@ -1,4 +1,4 @@
-<div layout="column" ng-cloak>		
+<div ng-cloak>		
 	<md-content class="md-padding">
 		<p>Version {{appVersion}}</p>
 		<p><strong><a href="mailto:Ali.Al-Munayer@csc-scc.gc.ca">Contact</a></strong></p>
