--- a/www/partials/log.html
+++ b/www/partials/log.html
@@ -1,6 +1,6 @@
 <div ng-cloak id="popupContainer">			
 	<md-content class="md-padding">
-		<md-list ng-hide="!results || results.length == 0">
+		<md-list md-whiteframe="3" ng-hide="!results || results.length == 0">
 	      <md-list-item ng-repeat="item in results">
 	      	<div flex>
 	      		<h4>{{item.mood}}</h4>
