--- a/www/partials/resources.html
+++ b/www/partials/resources.html
@@ -1,5 +1,5 @@
 <div ng-controller="ResourcesCtrl as ctrl" ng-cloak>
-	<div flex>
+	<md-content class="md-padding">
 		<form ng-submit="$event.preventDefault()">
 			<md-autocomplete
 		          md-selected-item="ctrl.selectedItem"
@@ -16,11 +16,9 @@
 		          No resource matching "{{ctrl.searchText}}" were found.
 		        </md-not-found>
 		    </md-autocomplete>
-	    </form>
-    </div>
-   	<md-switch flex class="md-padding" ng-model="gpsState" ng-change="updateList(gpsState)" ng-if="isGPSEnabled()" aria-label="gps">GPS Results <span>({{getProvince()}})</span></md-switch>
-	<md-content>      
-	    <md-list>
+       		<md-switch flex ng-model="gpsState" ng-change="updateList(gpsState)" ng-if="isGPSEnabled()" aria-label="gps">GPS Results <span>({{getProvince()}})</span></md-switch>
+	    </form>      
+	    <md-list md-whiteframe="3">
 	      <md-list-item class="md-2-line" ng-repeat="item in ctrl.querySearch(ctrl.searchText)">
 	      	<ng-md-icon class="md-avatar-icon" icon="person"></ng-md-icon>
 	        <div class="md-list-item-text">
