--- a/www/partials/settings.html
+++ b/www/partials/settings.html
@@ -1,6 +1,6 @@
 <div ng-cloak>			
-	<md-content>
-		<md-list>
+	<md-content class="md-padding">
+		<md-list md-whiteframe="3">
 	      <md-list-item class="md-2-line">
 	        <div class="md-list-item-text">
 	          <span><ng-md-icon icon="language" style="fill: gray"></ng-md-icon>&nbsp;{{translation.SETTINGS_LANG}}</span>	          
