--- a/www/partials/toolkit.html
+++ b/www/partials/toolkit.html
@@ -1,5 +1,5 @@
 <div ng-cloak>			
-	<md-content>
+	<md-content class="md-padding">
 	    <md-card>
 	    	<md-card-title>
           		<md-card-title-text>
