--- a/www/partials/links.html
+++ b/www/partials/links.html
@@ -1,6 +1,6 @@
 <div ng-cloak>			
-	<md-content>
-		<md-list>
+	<md-content class="md-padding">
+		<md-list md-whiteframe="3">
 	      <md-list-item class="md-2-line" ng-click="goToLink(item.url)" ng-repeat="item in externalLinks.data">
 	        <div class="md-list-item-text">
 	          <span><ng-md-icon icon="link" style="fill: gray"></ng-md-icon>&nbsp;{{item.name}}</span>
